# basicNesEmulator

./: CMakeLists.txt  README.md  controller.h  def.h  main2.c  ppu.h  rom.c  rom.h
include/: bus.h  cpu.h  instdecode.h
src/: bus.c  controller.c  cpu.c  instdecode.c  ppu.c
